Some logging for contact export + Logo url fix

--- a/app/views/layouts/mailer/base.liquid
+++ b/app/views/layouts/mailer/base.liquid
@@ -67,7 +67,7 @@
               <tr style="margin: 0;">
                 {% if global_config['BRAND_NAME'] != '' %}
                   <td class="content-block" style="vertical-align: top; margin: 0;" valign="top">
-                    <img src="https://app.onehash.is/files/OneHash_Logo.png" style="max-width: 100%; height: auto; vertical-align: top; text-align: center; margin: 0;" align="center" valign="top" alt="{{global_config['BRAND_NAME']}}"/>
+                    <img src="https://app.onehash.ai/assets/whitelabel/images/whitelabel_logo_long.png" style="max-width: 100%; height: auto; vertical-align: top; text-align: center; margin: 0;" align="center" valign="top" alt="{{global_config['BRAND_NAME']}}"/>
                   </td>
                 {% endif %}
               </tr>
