--- a/enterprise/app/views/fields/account_features_field/_form.html.erb
+++ b/enterprise/app/views/fields/account_features_field/_form.html.erb
@@ -30,7 +30,8 @@
           </span>
           <span class="text-sm text-slate-700"><%= display_name %></span>
         </div>
-        <% should_disable = ChatwootHub.pricing_plan == 'community' %>
+        <% should_disable = ChatwootHub.pricing_plan == 'community' %> 
+        <%# This check is redundant for onehash we enable all the features %>
         <span><%= check_box "enabled_features", "feature_#{feature_key}", { checked: val, disabled: should_disable, class: "h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-600" }, true, false %></span>
       </div>
     <% end %>
