Password reset url in mail and account custom attrs

--- a/app/views/mailers/administrator_notifications/account_notification_mailer/account_password.liquid
+++ b/app/views/mailers/administrator_notifications/account_notification_mailer/account_password.liquid
@@ -6,4 +6,14 @@
   {{ meta['password'] }}
 </h2>
 
-<p>Please update the password by logging into your account with this password</p>
+<p>
+  Please update your password by logging into your account with this password.<br>
+  You can change your password directly by clicking the link below:
+</p>
+
+<p>
+  <a href="{{ meta['change_password_url'] }}" 
+     style="display:inline-block;background:#1976d2;color:#fff;text-decoration:none;padding:12px 24px;border-radius:4px;">
+    Change Password
+  </a>
+</p>
