--- a/app/views/widgets/show.html.erb
+++ b/app/views/widgets/show.html.erb
@@ -28,7 +28,7 @@
         timezone: '<%= @web_widget.inbox.timezone %>',
         allowMessagesAfterResolved: <%= @web_widget.inbox.allow_messages_after_resolved %>,
         disableBranding: <%= @web_widget.inbox.account.feature_enabled?('disable_branding') %>,
-        shopDomain: "<%= Integrations::Hook.find_by(account: @web_widget.inbox.account.id, app_id: 'shopify').reference_id %>",
+        shopDomain: "<%= Integrations::Hook.find_by(account: @web_widget.inbox.account.id, app_id: 'shopify')&.reference_id %>",
         hasShop: <%= Integrations::Hook.find_by(account: @web_widget.inbox.account.id, app_id: 'shopify').present? %>
       }
       window.chatwootPubsubToken = '<%= @contact_inbox.pubsub_token %>'
