--- a/shopify_app_config/one-hash-chat/extensions/one-hash-chat/blocks/chat_widget.liquid
+++ b/shopify_app_config/one-hash-chat/extensions/one-hash-chat/blocks/chat_widget.liquid
@@ -10,6 +10,29 @@
 
     var sdkUrl = "/apps/onehash-chat/packs/js/sdk.js";
 
+window.__dynamicImportHandler__ = function(importPath) {
+  const base =   '/apps/onehash-chat/';
+  return base + importPath;
+
+  {% comment %} console.log("Imported: ", importPath)
+  const base = window.location.pathname.startsWith('/apps/onehash-chat/')
+    ? '/apps/onehash-chat/'
+    : '/';
+  return base + importPath; {% endcomment %}
+};
+
+window.__dynamicImportPreload__ = function(preloadPaths) {
+  const base = '/apps/onehash-chat/';
+  return preloadPaths.map(p => base + p);
+
+  {% comment %} console.log("Preloaded: ", preloadPaths)
+  const base = window.location.pathname.startsWith('/apps/onehash-chat/')
+    ? '/apps/onehash-chat/'
+    : '/';
+  return preloadPaths.map(p => base + p); {% endcomment %}
+};
+
+
     var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
     g.src = sdkUrl;
     g.defer = true;
